--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header id="header">
         <div class="logo">
             <a href="#" id="logo">Logo</a>
+            <link rel="image" herf="poster_f423e990-f630-4f05-bec2-749e489fb0bc.webp">
         </div>
         <input type="checkbox" id="click">
         <label for="click" class="mainicon">
