--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header id="header">
         <div class="logo">
-            <a href="#" id="logo">Logo</a>
-            <link rel="image" herf="poster_f423e990-f630-4f05-bec2-749e489fb0bc.webp">
+            <a href="poster_f423e990-f630-4f05-bec2-749e489fb0bc.webp" id="logo">Logo</a>
+          
         </div>
         <input type="checkbox" id="click">
         <label for="click" class="mainicon">
