--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>پورتفولیوی برنامه‌نویسی</title>
+    <title>Neon Design</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <header class="header">
+            <nav class="nav-bar">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <header>
-        <h1>سلام، من یک برنامه‌نویس هستم!</h1>
-        <p>این نمونه‌ای از سایت شخصی من است که پروژه‌هایم را نمایش می‌دهد.</p>
-        <a href="#" class="button">تماس با من</a>
-    </header>
+        <section class="content">
+            <h1>Popbore</h1>
+            <p>
+                This is an example text that describes the project or highlights. 
+                It can be replaced with your own content and design goals.
+            </p>
+            <button class="neon-button">Click Me</button>
+        </section>
 
-    <section class="projects">
-        <div class="project-card">
-            <h2>پروژه شماره ۱</h2>
-            <p>یک پروژه جذاب که با جدیدترین تکنولوژی‌ها ساخته شده است.</p>
-            <a href="#" class="button">مشاهده پروژه</a>
-        </div>
+        <section class="widgets">
+            <div class="widget">92</div>
+            <div class="widget">91</div>
+            <div class="widget">Lock</div>
+            <div class="widget">Settings</div>
+        </section>
 
-        <div class="project-card">
-            <h2>پروژه شماره ۲</h2>
-            <p>این پروژه شامل کدنویسی پیشرفته و طراحی مدرن است.</p>
-            <a href="#" class="button">مشاهده پروژه</a>
-        </div>
-    </section>
-
-    <footer>
-        <p>تمامی حقوق محفوظ است &copy; 2025</p>
-    </footer>
-
+        <footer class="footer">
+            <button class="footer-button">#00A</button>
+            <button class="footer-button">Load</button>
+        </footer>
+    </div>
 </body>
 </html>
