--- a/index.html
+++ b/index.html
@@ -1,44 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Design</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neon Design</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <nav class="nav-bar">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+  <div class="container">
+    <header>
+      <h1>Popbore</h1>
+      <p class="description">Welcome to a futuristic neon-themed web design. Explore projects and information in style!</p>
+      <button class="neon-button">Explore More</button>
+    </header>
 
-        <section class="content">
-            <h1>Popbore</h1>
-            <p>
-                This is an example text that describes the project or highlights. 
-                It can be replaced with your own content and design goals.
-            </p>
-            <button class="neon-button">Click Me</button>
-        </section>
-
-        <section class="widgets">
-            <div class="widget">92</div>
-            <div class="widget">91</div>
-            <div class="widget">Lock</div>
-            <div class="widget">Settings</div>
-        </section>
-
-        <footer class="footer">
-            <button class="footer-button">#00A</button>
-            <button class="footer-button">Load</button>
-        </footer>
+    <div class="widgets">
+      <div class="widget">92</div>
+      <div class="widget">91</div>
+      <div class="widget">🔒</div>
+      <div class="widget">⚙️</div>
     </div>
+
+    <div class="buttons">
+      <button class="neon-button">Button 1</button>
+      <button class="neon-button">Button 2</button>
+    </div>
+  </div>
 </body>
 </html>
