--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Popbore</h1>
-      <p class="description">Welcome to a futuristic neon-themed web design. Explore projects and information in style!</p>
+  <div class="main-container">
+    <div class="header">
+      <h1 class="title">Popbore</h1>
+      <p class="subtitle">
+        Welcome to a futuristic and clean design with neon blue accents.
+      </p>
       <button class="neon-button">Explore More</button>
-    </header>
+    </div>
 
     <div class="widgets">
       <div class="widget">92</div>
@@ -21,9 +23,18 @@
       <div class="widget">⚙️</div>
     </div>
 
-    <div class="buttons">
-      <button class="neon-button">Button 1</button>
-      <button class="neon-button">Button 2</button>
+    <div class="side-info">
+      <h2>+Light Blue</h2>
+      <ul>
+        <li>Customizable</li>
+        <li>Futuristic</li>
+        <li>Neon effects</li>
+      </ul>
+    </div>
+
+    <div class="footer-buttons">
+      <button class="neon-button">Links</button>
+      <button class="neon-button">#00A</button>
     </div>
   </div>
 </body>
